--- a/Odin/Web.Release.config
+++ b/Odin/Web.Release.config
@@ -15,6 +15,10 @@
     </connectionStrings>
   -->
 
+  <appSettings>
+    <add key="SeApiToken" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
+
   <connectionStrings>
     <add name="DefaultConnection"
          connectionString="#{AzureDBConnectionString}#"
