Add new items to model

--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -170,6 +170,10 @@
     <Compile Include="Persistence\Migrations\201709201950074_PopulateSeContactUidInUsers.Designer.cs">
       <DependentUpon>201709201950074_PopulateSeContactUidInUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201709282041234_AddClientRmcSeNumbToOrders.cs" />
+    <Compile Include="Persistence\Migrations\201709282041234_AddClientRmcSeNumbToOrders.Designer.cs">
+      <DependentUpon>201709282041234_AddClientRmcSeNumbToOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\TransfereesRepository.cs" />
@@ -223,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201709201950074_PopulateSeContactUidInUsers.resx">
       <DependentUpon>201709201950074_PopulateSeContactUidInUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201709282041234_AddClientRmcSeNumbToOrders.resx">
+      <DependentUpon>201709282041234_AddClientRmcSeNumbToOrders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
