Create API Keys

--- a/Odin/Web.Release.config
+++ b/Odin/Web.Release.config
@@ -16,7 +16,7 @@
   -->
 
   <appSettings>
-    <add key="SeApiToken" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SeApiToken" value="l49WKKZ99mlq0bkiFPODizQ1X" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <connectionStrings>
