--- a/Odin/Web.Staging.config
+++ b/Odin/Web.Staging.config
@@ -16,7 +16,7 @@
   -->
 
   <appSettings>
-    <add key="SeApiToken" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SeApiToken" value="BY8WgFhL9LHf4NRGhuEmAQsNb" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   
   <connectionStrings>
