--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -17,6 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SendGridAPIKey" value="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" />
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
