--- a/Odin.Data/packages.config
+++ b/Odin.Data/packages.config
@@ -7,4 +7,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
 </packages>
