--- a/Odin.IntegrationTests/Odin.IntegrationTests.csproj
+++ b/Odin.IntegrationTests/Odin.IntegrationTests.csproj
@@ -156,7 +156,6 @@
   <ItemGroup>
     <Compile Include="Controllers\Api\ConsultantsControllerTests.cs" />
     <Compile Include="Controllers\Api\ManagersControllerTests.cs" />
-    <Compile Include="Domain\ConsultantImporterTests.cs" />
     <Compile Include="TestAttributes\CleanData.cs" />
     <Compile Include="Controllers\Api\OrdersControllerTests.cs" />
     <Compile Include="Controllers\OrdersControllerTests.cs" />
@@ -183,7 +182,9 @@
       <Name>Odin</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Domain\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
