Add pretrip to orders

--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Core\Dtos\ConsultantImportDto.cs" />
     <Compile Include="Core\Dtos\ConsultantsDto.cs" />
     <Compile Include="Core\Dtos\OrderDto.cs" />
+    <Compile Include="Core\Dtos\OrderIndexDto.cs" />
     <Compile Include="Core\Dtos\ProgramManagerDto.cs" />
     <Compile Include="Core\Dtos\ManagerDto.cs" />
     <Compile Include="Core\Dtos\ManagersDto.cs" />
@@ -180,6 +181,10 @@
     <Compile Include="Persistence\Migrations\201709282041234_AddClientRmcSeNumbToOrders.Designer.cs">
       <DependentUpon>201709282041234_AddClientRmcSeNumbToOrders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201710031626041_AddPreTripToOrders.cs" />
+    <Compile Include="Persistence\Migrations\201710031626041_AddPreTripToOrders.Designer.cs">
+      <DependentUpon>201710031626041_AddPreTripToOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\TransfereesRepository.cs" />
@@ -236,6 +241,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201709282041234_AddClientRmcSeNumbToOrders.resx">
       <DependentUpon>201709282041234_AddClientRmcSeNumbToOrders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201710031626041_AddPreTripToOrders.resx">
+      <DependentUpon>201710031626041_AddPreTripToOrders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
