--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -471,10 +471,12 @@
     <Content Include="Content\Images\collapse.png" />
     <Content Include="Content\Images\dwellworks_icon.png" />
     <Content Include="Content\Images\expand.png" />
-    <Content Include="Content\Images\icn_calender_2.png" />
-    <Content Include="Content\Images\icn_message_2.png" />
-    <Content Include="Content\Images\icn_notification_2.png" />
+    <Content Include="Content\Images\icn_cal_1.png" />
+    <Content Include="Content\Images\icn_chat_1.png" />
+    <Content Include="Content\Images\icn_down_arrow.png" />
+    <Content Include="Content\Images\icn_note_1.png" />
     <Content Include="Content\Images\icn_profile.png" />
+    <Content Include="Content\Images\icn_up_arrow.png" />
     <Content Include="Content\Images\ic_search.png" />
     <Content Include="Content\Images\user-placeholder.png" />
     <Content Include="favicon.ico" />
@@ -496,9 +498,6 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
-    <Content Include="Fonts\OpenSans-Light.ttf" />
-    <Content Include="Fonts\OpenSans-Regular.ttf" />
-    <Content Include="Fonts\OpenSans-LightItalic.ttf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
