--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Interfaces\IEmailHelper.cs" />
     <Compile Include="Interfaces\IAccountHelper.cs" />
     <Compile Include="Interfaces\IOrderImporter.cs" />
+    <Compile Include="Loggers\AiExceptionLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Authentication\AddPhoneNumberViewModel.cs" />
