--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -478,6 +478,12 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\ForgotPassword\forgotpassword.css" />
+    <Content Include="Content\ForgotPassword\forgotpassword.min.css" />
+    <Content Include="Content\ForgotPassword\home.css" />
+    <Content Include="Content\ForgotPassword\home.min.css" />
+    <Content Include="Content\ForgotPassword\login.css" />
+    <Content Include="Content\ForgotPassword\login.min.css" />
     <Content Include="Content\Images\bg_gradient.png" />
     <Content Include="Content\Images\bg_image.png" />
     <Content Include="Content\Images\collapse.png" />
@@ -531,6 +537,7 @@
     </None>
     <Content Include="Content\Login\login.scss" />
     <Content Include="Content\Orders\orders.scss" />
+    <Content Include="Content\ForgotPassword\forgotpassword.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
