--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Domain\ManagerImporterTests.cs" />
     <Compile Include="Domain\OrderImporterTests.cs" />
     <Compile Include="Extensions\ControllerExtensions.cs" />
+    <Compile Include="Helpers\AccountHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +150,7 @@
       <Name>Odin</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
