--- a/Odin/compilerconfig.json
+++ b/Odin/compilerconfig.json
@@ -1,14 +1,18 @@
 ﻿[
   {
-    "inputFile": "Content/Orders/orders.scss",
-    "outputFile": "Content/Orders/orders.css"
+    "inputFile": "Content/css/orders.scss",
+    "outputFile": "Content/css/orders.css"
   },
   {
-    "inputFile": "Content/Login/login.scss",
-    "outputFile": "Content/Login/login.css"
+    "inputFile": "Content/css/login.scss",
+    "outputFile": "Content/css/login.css"
   },
   {
-    "inputFile": "Content/ForgotPassword/forgotpassword.scss",
-    "outputFile": "Content/ForgotPassword/forgotpassword.css"
+    "inputFile": "Content/css/forgotpassword.scss",
+    "outputFile": "Content/css/forgotpassword.css"
+  },
+  {
+    "inputFile": "Content/css/transferee.scss",
+    "outputFile": "Content/css/transferee.css"
   }
 ]
